--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,15 @@ body {
   line-height: 1.5;
 }
 body, .app {
-  background: white;
+  background: #1e272e;
+  color: white;
 }
 
 /* main page */
 
 .list-books-title {
   padding: 10px 0;
-  background: #2e7c31;
+  background: #2d98da;
   text-align: center;
 }
 .list-books-title h1 {
@@ -53,7 +54,7 @@ body, .app {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background: #2e7d32;
+  background: #2d98da;
   background-image: url('./icons/add.svg');
   background-repeat: no-repeat;
   background-position: center;
@@ -72,10 +73,11 @@ body, .app {
   z-index: 5;
   display: flex;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 0 6px rgba(0,0,0,0.23);
+  background: #808080;
 }
 .search-books-input-wrapper {
   flex: 1;
-  background: #e9e;
+  background: #808080;
 }
 .search-books-bar input {
   width: 100%;
@@ -147,7 +149,7 @@ body, .app {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background: #60ac5d;
+  background: #2d98da;
   background-image: url('./icons/arrow-drop-down.svg');
   background-repeat: no-repeat;
   background-position: center;
